--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
 
         <div class="collapse navbar-collapse" id="myNavbar">
             <ul class="nav navbar-nav">
-                <li><a href=""></a></li>
-                <li><a href=""></a></li>
+                <li><a href="">Video</a></li>
+                <li><a href="#contactus">Contact Us</a></li>
                 <li><a href=""></a></li>
                 <li><a href=""></a></li>
                 <li><a href=""></a></li>
