--- a/index.html
+++ b/index.html
@@ -33,16 +33,15 @@
         <div class="collapse navbar-collapse" id="myNavbar">
             <ul class="nav navbar-nav">
                 <li><a href="">Video</a></li>
+                <li><a href="#life-of-the-campus">Life Of The Campus</a></li>
+                <li><a href="#achievements">Achievements</a></li>
                 <li><a href="#contactus">Contact Us</a></li>
-                <li><a href=""></a></li>
-                <li><a href=""></a></li>
-                <li><a href=""></a></li>
             </ul>
         </div>
 
     </nav>
 
-    <div class="announcement">
+    <div class="announcement" id="video">
         <marquee id="marqueeStyle" onmouseover="this.stop();" onmouseout="this.start();">
             * Feel free to ask your queries on "info@dps-secunderabad.in" or "https://www.dps-secunderabad.in/" or "040-2789 5900/02123" *
         </marquee>
@@ -50,11 +49,103 @@
     <iframe width="1019" height="573" src="https://www.youtube.com/embed/jFAD5R9FBWs" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
     <div class="container">
+
+        <br>
+        <br>
+        <br>
+
+        <div class="page-header" id="life-of-the-campus">
+            <h2 class="text-capitalize">life of the campus</h2>
+
+            <div class="row">
+
+                <div class="travel-mainDiv">
+                    <img class="img-responsive" src="download.jpg">
+                    <h4 class="text-capitalize"><kbd>school sports area</kbd></h4>
+                    <hr>
+                    <h5 class="text-success text-capitalize text-left">was build in 1997</h5>
+                    <p class="text-primary text-left">Sports are an excellent medium to help youngsters learn and develop life’s many
+                        valuable lessons. They teach students to respect the coach, teammates, opponents,
+                        referees. They learn to work together using the strengths and support each other
+                        towards a common goal. Students tend to come up with strategies to overcome
+                        obstacles. They also teach one to accept failure and work harder to achieve success.
+                    </p>
+                </div>
+
+                <div class="travel-mainDiv">
+                    <img class="img-responsive" src="stage.jpg.crdownload">
+                    <h4 class="text-capitalize"><kbd>school stage</kbd></h4>
+                    <hr>
+                    <h5 class="text-success text-capitalize text-left">was established in 2010</h5>
+                    <p class="text-primary text-left">Sports are an excellent medium to help youngsters learn and develop life’s many
+                        valuable lessons. They teach students to respect the coach, teammates, opponents,
+                        referees. They learn to work together using the strengths and support each other
+                        towards a common goal. Students tend to come up with strategies to overcome
+                        obstacles. They also teach one to accept failure and work harder to achieve success.</p>
+                </div>
+
+                <div class="travel-mainDiv">
+                    <img class="img-responsive" src="library.jpg.crdownload">
+                    <h4 class="text-capitalize"><kbd>school library</kbd></h4>
+                    <hr>
+                    <h5 class="text-success text-capitalize text-left">was build in 1993</h5>
+                    <p class="text-primary text-left">The school has a well - stocked library with an impressive index of titles, covering fiction and non-fiction, periodicals, magazines, and newspapers. Basic Internet facilities are available for research and study. The library is managed by qualified librarians. The library houses around 20,000 books, a good collection of educational CDs and DVDs.
+
+                    </p>
+                </div>
+
+            </div>
+        </div>
+
+        <br>
+        <br>
+        <br>
+
+        <div class="page-header" id="achievements">
+            <h2 class="text-capitalize">school achievements</h2>
+        </div>
+        <div class="bg-primary movie-head" data-toggle="collapse" data-target="#school_1">
+            National Spell-Bee Competetion<i class="fa fa-sort-desc"></i>
+        </div>
+
+        <div class="colapse" id="school_1">
+            <div class="col-lg-3 col-sm-3 col-md-3 col-xs-12" id="achievementsID">
+                <img src="spell-bee.jpg" class="img-responsive img-thumbnail">
+            </div>
+            <div class="col-lg-9 col-sm-9 col-md-9 col-xs-12">
+                <h5 class="text-success text-left text-capitalize">A spelling bee is a competition in which contestants are asked to spell a broad selection of words, usually with a varying degree of difficulty.</h5>
+                <p>The winners are, grade 1- Manav Khurana, Scholars Global School, Bahadurgarh, grade 2- Kuval Anand, Sri Venkateshwar International School, New Delhi, grade 3- Aayra Dhindsa Sawkmie, Sanskriti School, New Delhi, grade 4- Achintya Jha, St Columba’s School, New Delhi, grade 5- Ananta Jaiswal, Little Flower School, Jamshedpur.
+
+                </p>
+            </div>
+        </div>
+
+       
+
+        <div class="pager-header" id="what's-new">
+            <h2 class="text-capitalize">what's new</h2>
+        </div>
+
+        <ul class="list group">
+
+            <li class="list-group-item list-group-item-success col-lg-12 col-sm-12 col-md-12 col-xs-12 environment_li">
+                <h4>New Swimming Pool</h4>
+                <img src="pool.jpg" class="img-responsive col-lg-5 col-sm-5 col-md-5 col-xs-12">
+                <p class="list-group-item-text col-lg-7 col-sm-7 col-md-7 col-xs-12">
+                    Teaching your kids about positive competition and motivation can be helpful to your child. A swimming pool is a great place to use swimming skills or games to teach this. Swimming can also transfer to other sports since it enhances coordination, flexibility, endurance, and strength.It maintains your heart rate and takes away stress from the body. It builds muscular strength and increases immunity. Exercises your lungs and helps to keep you fit. It helps to burn calories which in turn reduces weight.
+                </p>
+            </li>
+        </ul>
+
+        <br>
+        <br>
+        <br>
+
         <div class="page-header col-lg-12 col-sm-12 col-md-12 col-xs-12" id="contactus">
             <h2 class="text-capitalize">contact us</h2>
         </div>
         <div id="map">
-            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d121740.12451518717!2d78.50132172914645!3d17.537138488948017!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3bcb84ad48255d29%3A0x410841a999b3433!2sSecunderabad%2C%20Telangana!5e0!3m2!1sen!2sin!4v1623782595924!5m2!1sen!2sin" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d121740.12451518717!2d78.50132172914645!3d17.537138488948017!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3bcb84ad48255d29%3A0x410841a999b3433!2sSecunderabad%2C%20telangana!5e0!3m2!1sen!2sin!4v1623782595924!5m2!1sen!2sin" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
         </div>
         <div id="details">
             <img src="principal_1.png" class="img-responsive img-circle col-lg-3 col-sm-3 col-md-3 col-xs-4">
@@ -70,8 +161,7 @@
 
             </div>
         </div>
+
     </div>
 
-</body>
-
-</html>
+</body></html>
