--- a/index.html
+++ b/index.html
@@ -35,6 +35,8 @@
                 <li><a href="">Video</a></li>
                 <li><a href="#life-of-the-campus">Life Of The Campus</a></li>
                 <li><a href="#achievements">Achievements</a></li>
+                <li><a href="#what's-new">Whats New</a></li>
+                <li><a href="#alumni">Alumni</a></li>
                 <li><a href="#contactus">Contact Us</a></li>
             </ul>
         </div>
@@ -120,9 +122,9 @@
             </div>
         </div>
 
-       
 
-        <div class="pager-header" id="what's-new">
+
+        <div class="page-header" id="what's-new">
             <h2 class="text-capitalize">what's new</h2>
         </div>
 
@@ -136,6 +138,38 @@
                 </p>
             </li>
         </ul>
+
+        <br>
+        <br>
+        <br>
+
+        <div class="page-header" id="alumni">
+            <h2 class="text-capitalize">Alumni</h2>
+        </div>
+        <div class="col-lg-3 col-sm-3 col-md-3 col-xs-6 book" id="aluminiList" data-toggle="modal1" data-target="#schoolalumni1">
+            <img src="kcr.cms" class="img-response">
+            <hr>
+            <p class="text-danger">K. Chandrashekar Rao</p>
+        </div>
+
+        <div class="modalfade" id="school-alumni1">
+            <div class="modal-dialog">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <button type="button" class="close" data-dismiss="modal">&times;</button>
+                        <h4 class="modal-title">K. Chandrashekar Rao</h4>
+                    </div>
+
+                    <div class="modal-body">
+                        <img src="kcr.cms" class="img-responsive img_modal">
+                        <p class="p-modal">is an Indian politician serving as the first and current Chief Minister of Telangana since 2014.
+                            <br><a href="https://en.wikipedia.org/wiki/K._Chandrashekar_Rao"><b>To Know More About Him</b></a>
+                        </p>
+                    </div>
+
+                </div>
+            </div>
+        </div>
 
         <br>
         <br>
@@ -164,4 +198,6 @@
 
     </div>
 
-</body></html>
+</body>
+
+</html>
